--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "clsx": "2.1.1",
     "framer-motion": "11.11.17",
     "next": "^14.2.33",
-    "next-themes": "0.3.0",
+    "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "2.5.4",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.10.5",
+    "@types/node": "^24.5.2",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "10.4.21",
     "eslint": "^9.36.0",
-    "postcss": "8.4.49",
+    "postcss": "8.5.6",
     "tailwindcss": "3.4.15",
-    "typescript": "5.6.3"
+    "typescript": "5.9.2"
   },
   "engines": {
     "node": ">=18.0.0"
